2007-12-16  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/ctype.S:
	  . isalnum(): Optimize.
	  . isxdigit(): Correct a behaviour with nonzero high byte.
	  . iscntrl(): Fix bug [no-id]: iscntrl() return true for some
	  values from 0x80 to 0xff. Optimize a little.
	  . ispunct(): Optimize.
	  . tolower(): Return as is, if the input is not an unsigned char
	  value. Optimize.
	  . toupper(): Ditto.
	* include/ctype.h: Specify (and change) doc about the behaviour
	in case then the input is not an unsigned char value.
	* NEWS: Note about fixed bug of iscntrl().
	* tests/simulate/stdlib/isalnum-1.c: New file.
	* tests/simulate/stdlib/isalpha-1.c: New file.
	* tests/simulate/stdlib/isascii-1.c: New file.
	* tests/simulate/stdlib/isblank-1.c: New file.
	* tests/simulate/stdlib/iscntrl-1.c: New file.
	* tests/simulate/stdlib/isdigit-1.c: New file.
	* tests/simulate/stdlib/isgraph-1.c: New file.
	* tests/simulate/stdlib/ispunct-1.c: New file.
	* tests/simulate/stdlib/isupper-1.c: New file.
	* tests/simulate/stdlib/isxdigit-1.c: New file.
	* tests/simulate/stdlib/tolower-1.c: New file.
	* tests/simulate/stdlib/toupper-1.c: New file.

2007-12-16  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix bug #18994: minor optimization possible to stdlib functions
	isspace(), isprint(), and islower()
	* libc/stdlib/ctype.S: Optimize isspace(), isprint() and islower().
	* tests/simulate/stdlib/islower-1.c: New file.
	* tests/simulate/stdlib/isprint-1.c: New file.
	* tests/simulate/stdlib/isspace-1.c: New file.
	* NEWS: Note about this.

	* NEWS: Add the chapter 'Main changes from 1.4 to 1.5'.

2007-12-12  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm216.h: Fix fuse data.
	* include/avr/io90pwm316.h: Ditto.

2007-12-12  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32hvb.h: Remove unused register.
	* include/avr/io90pwm216.h: Fix IVT size. Fix for bug #21749.
	* include/avr/io90pwm316.h: Ditto.