@@ -26,10 +26,21 @@
   ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
   POSSIBILITY OF SUCH DAMAGE. */
 
+/* $Id$	*/
+
+#ifndef	__DOXYGEN__
+
 #include "macros.inc"
 
 	.section .text
-	.global abort
-abort:
-	rjmp	abort
+	.global _U(abort)
+	.type	_U(abort), "function"
 
+_U(abort):
+	ldi	r24, lo8(1)
+	ldi	r25, hi8(1)
+	XJMP	_U(_exit)
+
+	.size	_U(abort), . - _U(abort)
+
+#endif	/* !__DOXYGEN__	*/
